Thu May 17 00:58:18 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.cc: More whitespace fettling.

Thu May 17 00:57:17 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Add configure checks for libsvm.

Wed May 16 14:58:58 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.h: Remove unused '#include <list>'.

Wed May 16 14:57:37 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.h: Add header multiple include guard.

Wed May 16 13:32:18 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h: Fix typos.

Wed May 16 13:28:58 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h,letor.cc,letor_internal.cc,letor_internal.h:
	  Use Xapian::doccount for msetsize.

Wed May 16 12:50:55 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.cc: Prefer ++x to x++.

Wed May 16 11:25:30 GMT 2012  Olly Betts <olly@survex.com>

	* letor.cc: Change the methods which just forward to Letor::Internal
	  methods to explicitly tail call.

Wed May 16 11:24:02 GMT 2012  Olly Betts <olly@survex.com>

	* letor.cc: Don't use "using Xapian", but instead wrap the code in
	  "namespace Xapian {" and "}".

Wed May 16 11:23:10 GMT 2012  Olly Betts <olly@survex.com>

	* letor.cc: Doesn't use <cstring>.

Wed May 16 11:03:23 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h: Fix incorrect spellings of "Xapian"!

Wed May 16 10:59:18 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h,letor.cc,letor_internal.cc,letor_internal.h:
	  Fix whitespace to match Xapian coding standards.

Wed May 16 07:53:21 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h: Fix documentation comment typos.

Wed May 16 07:49:43 GMT 2012  Olly Betts <olly@survex.com>

	* bin/questletor.cc,bin/xapian-letor-update.cc,letor.cc,
	  letor_internal.cc,letor_internal.h: Sort out standard @file and
	  @brief for all letor source files.

Wed May 16 06:06:17 GMT 2012  Olly Betts <olly@survex.com>

	* .gitignore: Update.
